Changelog
=========

2.1 (Unreleased)
----------------

- Fix Last-Modified header format.
  [elro]

- Add webdav support.
  [elro]

- Lowercase filenames before looking up the mime-type. This fixes incorrect
  mime-types for uppercase filenames.
  [wichert]

- Remove the properties alias from the Reflector type. This is obsolete
  in Plone 3.x.
  [wichert]

- Add CSRF authenticator to the folder_contents page. This means Reflecto now
  requires Plone 3.1, or Plone 3.0 with the CSRF hotfix. This fixes
  http://plone.org/products/reflecto/issues/30 .
  [wichert]


2.0 (Released 2008/05/14)
-------------------------

- Use the correct title for the folder_contents buttons.
  [wichert]

- Add support for downloading folders as zip files.
  [wichert]

- If CacheSetup is installed allow users to tweak cache rules for individual
  Reflector instances.
  [wichert]

- Prevent CR/LF conversion when uploading files on Windows. This fixes
  bug 22 (see http://plone.org/products/reflecto/issues/22 ).
  [wichert]

- Port to Plone 3.
  [wichert]

- Add a 'live' option which makes Reflecto show live filesystem data instead
  of catalogued data.
  [wichert]

- Correct the Plone version test. This fixes bug 11 (see
  http://plone.org/products/reflecto/issues/11 ).
  [wichert]


1.2 (Released 2007/09/05)
-------------------------

- Changed the permission mask from 600 to 644
  [FinnArild]

- Issue #1: Include the Title in SearchableText.
  [mj]

- Issue #2: Add a SearchableText implementation for Directories, returing the
  Title.
  [mj]

- Updated Install method to use the CMF 2.1 GenericSetup interface if Plone 3
  is being used.
  [wichert]

- Updated imports which current Zope 3 deprecated
  [wichert]

- Updated tests to support Archetypes 1.5 as used by Plone 3.0
  [wichert]

- Updated @@index view mockup registration in directory tests for Plone 3.0
  [mj]
  
- Fixed contents tab for Plone 3.0
  [mj]


1.1 (Released 2007/06/28)
-------------------------
